<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_tiny"
    android:layout_marginLeft="@dimen/margin_small"
    android:layout_marginRight="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_small"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="false">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_pico"
        android:layout_marginLeft="@dimen/margin_tiny"
        android:layout_marginRight="@dimen/margin_tiny"
        android:layout_marginTop="@dimen/margin_pico"
        android:paddingBottom="@dimen/margin_tiny"
        android:paddingLeft="@dimen/margin_tiny"
        android:paddingRight="@dimen/margin_tiny"
        android:paddingTop="@dimen/margin_tiny"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.MainActivity"
        tools:showIn="@layout/activity_main">

        <android.support.constraint.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/padding_small"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="0dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/padding_small"
            tools:layout_editor_absoluteX="374dp"
            tools:layout_editor_absoluteY="0dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/padding_small"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="10dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/padding_small"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="501dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:text="@string/label_post_title"
            android:textColor="@color/text_fg_color"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:ellipsize="end"
            android:gravity="left|top"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="@color/text_fg_color"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/titleLabel"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/bodyLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/label_post_body"
            android:textColor="@color/text_fg_color"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="left"
            android:textColor="@color/text_fg_color"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/bodyLabel"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/userNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/label_user_name"
            android:textColor="@color/text_fg_color"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/body"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:gravity="left"
            android:text="kmcskik"
            android:textColor="@color/text_fg_color"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toEndOf="@id/userNameLabel"
            app:layout_constraintTop_toBottomOf="@id/body"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/numberOfCommentsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:text="@string/label_number_of_comments"
            android:textColor="@color/text_fg_color"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/userName"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/numberOfComments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:gravity="left|top"
            android:text="No of comments"
            android:textColor="@color/text_fg_color"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toEndOf="@id/numberOfCommentsLabel"
            app:layout_constraintTop_toBottomOf="@id/userName"
            tools:layout_editor_absoluteX="10dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
